attempting to fix background image on mobile safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -175,7 +175,7 @@
 .bg-static {
   position: fixed;
   inset: 0;
-  z-index: -2;
+  z-index: 0;
   overflow: hidden;
   pointer-events: none;
 }
